fixed auto zoom on safari

--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ body {
   border: 1px solid white;
   border-radius: 50px;
   color: white;
-  margin: 0 0 20px 10px;
+  margin-left: 10px;
 }
 
 @media (max-width: 600px) {
